Assignments/Week2/Mintlify/style.css
/* ... */
.h-center-menu {
  text-align: center;
  text-decoration: none;
  color: #fff;
  height: 32px;
  padding: 4px 12px;
  text-decoration: none;
  white-space: nowrap;
  font-size: 0.9rem;
  font-weight: 500;
  line-height: 150%;
  cursor: pointer;
}

.btn {
  width: 272.08px;
  height: 33.5px;

  display: flexbox;
  justify-content: center;
  align-items: center;
  padding: 0;
  margin: 0;
}

.btn-container {
  width: 250px;
  height: 35px;
  display: flex;
  gap: 0.5rem;
}

.btn-container a {
  text-decoration: none;
  height: 35x;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  gap: calc(var(--spacing) * 1.5);
  padding: 4.5px 12px;
  border-radius: 3.40282e38px;
  cursor: pointer;
  font-size: 13px;
  font-weight: 500;
}

.btn-btn-contact {
  width: 123px;
  background-color: lab(100% 0 0 / 0.05);
  border: 1px solid lab(100% 0 0 / 0.05);
  color: #fff;
}

.btn-btn-sec {
  width: 118px;
  background-color: #08090a;
  border: 1px solid #08090a;
  color: #fff;
}

nav.scrolled {
  background-color: transparent;
  backdrop-filter: blur(16px);
  -webkit-backdrop-filter: blur(16px);
}

nav.scrolled .header-center-main {
  color: #08090a;
}

nav.scrolled .btn-btn-ghost {
  color: #08090a;
  background-color: rgba(8, 9, 10, 0.05);
}

nav.scrolled .btn-btn-sec {
  background-color: #08090a;
  color: #fff;
  border: none;
}

.nav-logo-wrap {
  position: relative;
  display: inline-block;
}

.nav-logo-wrap .nav-logo-default {
  display: block;
}

.nav-logo-wrap .nav-logo-scrolled {
  position: absolute;
  left: 0;
  top: 0;
  opacity: 0;
  pointer-events: none;
}

nav.scrolled .nav-logo-wrap .nav-logo-default {
  opacity: 0;
  pointer-events: none;
}

.nav.scrolled .nav-logo-wrap .nav-logo-scrolled {
  position: absolute;
  opacity: 1;
  pointer-events: auto;
}

.bg-image-hero {
  z-index: -1;
  background-position: 50%;
  background-repeat: no-repeat;
  background-size: cover;
  width: 100%;
  height: 100%;
  position: absolute;
  top: -10rem;
}

.hero1 {
  min-height: 935px;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;

  background-image: url("https://www.mintlify.com/hero/bg-light.svg");
  background-repeat: no-repeat;
  background-size: cover;
}

.hero1 img {
  border-radius: 20px;
}

.new-btn button {
  margin-top: 80px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 20px;
  border: 1px solid #094868;
  background-color: #094868;
  height: 35px;

  gap: 10px;
  color: #fff;
}
.new-btn button p {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 25px;
  width: 50px;
  border-radius: 20px;
  background-color: green;
}

.headline {
  color: #fff;
  font-size: 50px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.description {
  color: #fff;
  gap: 10px;
  font-weight: 100px;
  font-size: 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.mail-start {
  border-radius: 20px;
  border: 2px solid #86bbb4;
  background-color: #68ada7;
  color: #86bbb4;
}

.mail {
  margin: 30px 0 70px 0;
  border: 1px solid none;
  height: 35px;
  color: #b5d8d5;
  border: 1px solid none;
  background-color: #68ada7;
  border-radius: 20px;
  padding: 0 10px 0 10px;
  display: flex;

  justify-content: center;
  align-items: center;
}
.mail-x {
  color: #b5d8d5;
  border: 1px solid #68ada7;
  background-color: #68ada7;
  border-radius: 20px;
  outline-style: none;
}

.start-btn {
  height: 30px;
  width: 80px;
  border-radius: 20px;
  border: 1px solid #68ada7;
  background-color: #fff;
}

.trusted-by {
  padding: 80px 120px 0 120px;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(2, 1fr);

  gap: 10x;
}

.logos {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 64px;
  width: 250px;
}
.feature {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.feature-txt1 {
  font-size: 30px;
  padding: 40px 0 0 0;
}

.feature-cards {
  padding-top: 40px;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  gap: 20px;
}
.cardtxt2 {
  line-height: 25px;
}

.feature-card {
  border: 1px solid #f6f7f6;
  border-radius: 20px;
  padding: 24px 24px 24px 24px;
  margin-bottom: 24px;
}

.card-txt {
  color: #0a8d5e;
  font-weight: 400;
  font-size: small;
}

.card-h2 h2 {
  font-weight: 400;
}

.UIPreiview-txt1 {
  font-size: 40px;
  padding: 40px 0 0 0;
}

.UIPreiview-cards {
  padding-top: 40px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 20px;
  border: 1px solid #f6f7f6;
  border-radius: 20px;
  padding: 24px 24px 24px 24px;
  margin: 0 180px 140px 180px;
}
.UIPreiview-cardtxt2 {
  line-height: 25px;
}
.explore-btn{
  
  height: 30px;
  width: 170px;
  background-color: #08090a;
  border: 1px solid #08090a;
  border-radius: 12px;
  color: #fff;
}
.enterprise {
  background-color: #f9f8f9;
}
.enterprise-card {
  padding: 80px 80px 20px 120px;
}
.enterprise-txt-btn {
  display: flex;
  justify-content: space-between;
}
.enterprise-btn {
  width: 180px;
}
.partnership-control {
  margin-top: 40px;
  display: flex;
  /* justify-content: space-around; */
  gap: 60px;
}

.customer {
  padding-top: 70px;
  background-color: #f9f8f9;
}
.customer .img {
  background-color: #f9f8f9;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.customer .img img {
  background-color: #f9f8f9;
  margin-left: 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border: 1px solid none;
  border-radius: 12px;
}

.customers-txt {
  margin: 48px 32px 48px 32px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
/* ... */

